--- a/portfolio.html
+++ b/portfolio.html
@@ -48,6 +48,23 @@
     <img src= "https://media.discordapp.net/attachments/1390067282788749493/1395278941211852851/Extremo_RP.png?ex=688f9f06&is=688e4d86&hm=25eccc8396c82ad8daff5db6dac647144a8d0f4851b18de98274764174d074a2&=&format=webp&quality=lossless" alt="VsComunnity" style="width: 100%; display: block; height: 180px; object-fit: cover;" />
   </div>
 
+  <div class="portfolio-item" title="VsComunnity" style="background-color: #1e1e1e; border-radius: 10px; overflow: hidden; box-shadow: 0 4px 10px rgba(0,0,0,0.6); cursor: pointer; transition: transform 0.3s; position: relative;">
+    <img src= "" alt="VsComunnity" style="width: 100%; display: block; height: 180px; object-fit: cover;" />
+  </div>
+
+
+   <div class="portfolio-item" title="VsComunnity" style="background-color: #1e1e1e; border-radius: 10px; overflow: hidden; box-shadow: 0 4px 10px rgba(0,0,0,0.6); cursor: pointer; transition: transform 0.3s; position: relative;">
+    <img src= "" alt="VsComunnity" style="width: 100%; display: block; height: 180px; object-fit: cover;" />
+  </div>
+
+   <div class="portfolio-item" title="VsComunnity" style="background-color: #1e1e1e; border-radius: 10px; overflow: hidden; box-shadow: 0 4px 10px rgba(0,0,0,0.6); cursor: pointer; transition: transform 0.3s; position: relative;">
+    <img src= "" alt="VsComunnity" style="width: 100%; display: block; height: 180px; object-fit: cover;" />
+  </div>
+
+
+   <div class="portfolio-item" title="VsComunnity" style="background-color: #1e1e1e; border-radius: 10px; overflow: hidden; box-shadow: 0 4px 10px rgba(0,0,0,0.6); cursor: pointer; transition: transform 0.3s; position: relative;">
+    <img src= "" alt="VsComunnity" style="width: 100%; display: block; height: 180px; object-fit: cover;" />
+  </div>
 </section>
 
 <footer>
@@ -61,4 +78,5 @@
 <script src="theme-toggle.js"></script>
 </body>
 </html>
+
 
