--- a/portfolio.html
+++ b/portfolio.html
@@ -8,9 +8,9 @@
   <style>
     .portfolio-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
       gap: 20px;
-      max-width: 1000px;
+      max-width: 1100px;
       margin: 2rem auto;
       padding: 0 1rem;
     }
@@ -30,9 +30,12 @@
 
     .portfolio-item img {
       width: 100%;
+      max-width: 250px;
       height: auto;
       border-radius: 8px;
       object-fit: contain;
+      display: block;
+      margin: 0 auto;
     }
 
     body.light .portfolio-item {
@@ -56,12 +59,33 @@
     <h2 class="section-title">Nosso Portfólio</h2>
 
     <div class="portfolio-grid">
-      <div class="portfolio-item">
-        <img src="https://media.discordapp.net/attachments/1390067282788749493/1395278167735795793/image.png?ex=688f9e4e&is=688e4cce&hm=f255c6c3c4435aef9c4708da6d80109fcbb8cf7e77eaea64ac7251ecce6689fa&=&format=webp&quality=lossless" alt="Portfólio 1">
-      </div>
-      <div class="portfolio-item">
-        <img src="https://media.discordapp.net/attachments/1390067282788749493/1395278168591437934/image.png?ex=688f9e4e&is=688e4cce&hm=d77586a3846f50db7f17749f4548ea974c4e1dc3de10e0cba7526c97675f60aa&=&format=webp&quality=lossless" alt="Portfólio 2">
-      </div>
+
+      <div class="portfolio-item"><img src="https://media.discordapp.net/attachments/1390067282788749493/1395278167735795793/image.png?ex=688f9e4e&is=688e4cce&hm=f255c6c3c4435aef9c4708da6d80109fcbb8cf7e77eaea64ac7251ecce6689fa&=&format=webp&quality=lossless" /></div>
+
+      <div class="portfolio-item"><img src="https://media.discordapp.net/attachments/1390067282788749493/1395278168591437934/image.png?ex=688f9e4e&is=688e4cce&hm=d77586a3846f50db7f17749f4548ea974c4e1dc3de10e0cba7526c97675f60aa&=&format=webp&quality=lossless" /></div>
+
+      <div class="portfolio-item"><img src="https://media.discordapp.net/attachments/1390067282788749493/1395278276574052383/VsComunnity.png?ex=688f9e68&is=688e4ce8&hm=344af3ec2ba0c7e94ed7fc17b7ca0d48d8ab3a8547f74b7a5035a67f269b304e&=&format=webp&quality=lossless&width=698&height=698" /></div>
+
+      <div class="portfolio-item"><img src="https://media.discordapp.net/attachments/1390067282788749493/1395278597056495676/Gonzaga_store_Venda.png?ex=688f9eb4&is=688e4d34&hm=6654ec19c987f11b04e170914dfdcc05eafdfc4087e176406ebee9a612f84ced&=&format=webp&quality=lossless" /></div>
+
+      <div class="portfolio-item"><img src="https://media.discordapp.net/attachments/1390067282788749493/1395278940821786626/Extremo_Qual_Lado.png?ex=688f9f06&is=688e4d86&hm=4f0e8beac0c702ab7744733de03d9dfef60cf7d48e9f0c44a44a7ecac2b1e086&=&format=webp&quality=lossless&width=334&height=594" /></div>
+
+      <div class="portfolio-item"><img src="https://media.discordapp.net/attachments/1390067282788749493/1395278941211852851/Extremo_RP.png?ex=688f9f06&is=688e4d86&hm=25eccc8396c82ad8daff5db6dac647144a8d0f4851b18de98274764174d074a2&=&format=webp&quality=lossless" /></div>
+
+      <div class="portfolio-item"><img src="https://media.discordapp.net/attachments/1390067282788749493/1395278941496938609/image_1.png?ex=688f9f06&is=688e4d86&hm=a95e864a9cbcedf025ab928d3b64f316857f5c5aea2361cf8199fc15dbf84528&=&format=webp&quality=lossless&width=476&height=594" /></div>
+
+      <div class="portfolio-item"><img src="https://media.discordapp.net/attachments/1390067282788749493/1395278941849124896/image.png?ex=688f9f06&is=688e4d86&hm=9e475b405b02058617b31881c8c2f5d1adf3420bfae5d607af34a2e0b4de6af6&=&format=webp&quality=lossless&width=477&height=594" /></div>
+
+      <div class="portfolio-item"><img src="https://media.discordapp.net/attachments/1390067282788749493/1395279481400332308/estancialoadscreen_1.png?ex=688f9f87&is=688e4e07&hm=59584290436838932e98642eb1801df3c7c167fe02d84d7e38241c11d1007df0&=&format=webp&quality=lossless&width=1056&height=594" /></div>
+
+      <div class="portfolio-item"><img src="https://media.discordapp.net/attachments/1390067282788749493/1395279540053479486/EstanciaGaucha.png?ex=688f9f95&is=688e4e15&hm=0cb537fd99d99d987fe760aa90cc6254d3db550d21be912238765f9a7a69aba7&=&format=webp&quality=lossless" /></div>
+
+      <div class="portfolio-item"><img src="https://media.discordapp.net/attachments/1390067282788749493/1395279838641655828/Perdizes_Cartao.png?ex=688f9fdc&is=688e4e5c&hm=1f24f96f87bfcc56ffc82605486e8016c89330fcd3d3a2a7994787761bf2a13b&=&format=webp&quality=lossless&width=334&height=594" /></div>
+
+      <div class="portfolio-item"><img src="https://media.discordapp.net/attachments/1390067282788749493/1395279841103839272/Cartao_Perdizes_Ultrar.png?ex=688f9fdd&is=688e4e5d&hm=8aec096b9aeeb3251c8adada625e0292f238da83519747d02e0f375783a76680&=&format=webp&quality=lossless&width=334&height=594" /></div>
+
+      <div class="portfolio-item"><img src="https://media.discordapp.net/attachments/1390067282788749493/1395279840071913643/VipPatraoEstancia.png?ex=688f9fdc&is=688e4e5c&hm=c2628aeefeafd12d1c74050a67f67788619aae28af32016c6e5bcccc939e27fd&=&format=webp&quality=lossless&width=396&height=594" /></div>
+
     </div>
   </section>
 
