--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,92 @@
   <title>Mitski Studios - Portfólio</title>
   <link rel="stylesheet" href="style.css" />
   <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #111;
+      color: white;
+      transition: background 0.3s, color 0.3s;
+    }
+    body.light {
+      background: #f7f7f7;
+      color: black;
+    }
+
+    header {
+      background: #111;
+      padding: 10px 20px;
+      display: flex;
+      justify-content: center;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+    }
+
+    .header-container {
+      width: 100%;
+      max-width: 1200px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .logo {
+      height: 50px;
+    }
+
+    nav {
+      display: flex;
+      align-items: center;
+      gap: 15px;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
+      padding: 5px 10px;
+      transition: color 0.3s;
+    }
+
+    nav a:hover {
+      color: #aaa;
+    }
+
+    body.light nav a {
+      color: black;
+    }
+
+    .toggle-btn {
+      background: none;
+      border: 1px solid white;
+      color: white;
+      padding: 5px 10px;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .toggle-btn:hover {
+      background: white;
+      color: black;
+    }
+
+    body.light .toggle-btn {
+      border: 1px solid black;
+      color: black;
+    }
+
+    .container {
+      max-width: 1200px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+    }
+
+    .section-title {
+      text-align: center;
+      font-size: 2rem;
+      margin-bottom: 1rem;
+    }
+
     .portfolio-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
@@ -41,18 +127,39 @@
     body.light .portfolio-item {
       background: #fafafa;
     }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      background: #111;
+      color: white;
+      margin-top: 40px;
+    }
+
+    footer img {
+      height: 40px;
+      display: block;
+      margin: 0 auto 10px;
+    }
+
+    body.light footer {
+      background: #ddd;
+      color: black;
+    }
   </style>
 </head>
 <body>
   <header>
-    <img src="https://media.discordapp.net/attachments/1390067282788749493/1395282900810731710/Mitski_Studios.png" alt="Logo" class="logo" />
-    <nav>
-      <a href="index.html">Início</a>
-      <a href="portfolio.html" aria-current="page">Portfólio</a>
-      <a href="vendas.html">Vendas</a>
-      <a href="contato.html">Contato</a>
-    </nav>
-    <button class="toggle-btn" onclick="document.body.classList.toggle('light')">🌙/☀️</button>
+    <div class="header-container">
+      <img src="https://media.discordapp.net/attachments/1390067282788749493/1395282900810731710/Mitski_Studios.png" alt="Logo" class="logo" />
+      <nav>
+        <a href="index.html">Início</a>
+        <a href="portfolio.html" aria-current="page">Portfólio</a>
+        <a href="vendas.html">Vendas</a>
+        <a href="contato.html">Contato</a>
+        <button class="toggle-btn" onclick="toggleTheme()">🌙/☀️</button>
+      </nav>
+    </div>
   </header>
 
   <section class="container">
@@ -93,5 +200,13 @@
     <img src="https://media.discordapp.net/attachments/1390067282788749493/1395282900810731710/Mitski_Studios.png" alt="Logo" />
     <small>© 2025 Mitski Studios - Todos os direitos reservados</small>
   </footer>
+
+  <script>
+    function toggleTheme() {
+      document.body.classList.toggle("light");
+      const btn = document.querySelector(".toggle-btn");
+      btn.textContent = document.body.classList.contains("light") ? "☀️/🌙" : "🌙/☀️";
+    }
+  </script>
 </body>
 </html>
