--- a/portfolio.html
+++ b/portfolio.html
@@ -155,7 +155,7 @@
       <nav>
         <a href="index.html">Início</a>
         <a href="portfolio.html" aria-current="page">Portfólio</a>
-        <a href="vendas.html">Vendas</a>
+        <a href="servicos.html">serviços</a>
         <a href="contato.html">Contato</a>
         <button class="toggle-btn" onclick="toggleTheme()">🌙/☀️</button>
       </nav>
