--- a/portfolio.html
+++ b/portfolio.html
@@ -181,9 +181,7 @@
 
       <div class="portfolio-item"><img src="https://media.discordapp.net/attachments/1390067282788749493/1395278941849124896/image.png?ex=688f9f06&is=688e4d86&hm=9e475b405b02058617b31881c8c2f5d1adf3420bfae5d607af34a2e0b4de6af6&=&format=webp&quality=lossless&width=477&height=594" /></div>
 
-
-
-      <div class="portfolio-item"><img src="https://media.discordapp.net/attachments/1390067282788749493/1395279540053479486/EstanciaGaucha.png?ex=688f9f95&is=688e4e15&hm=0cb537fd99d99d987fe760aa90cc6254d3db550d21be912238765f9a7a69aba7&=&format=webp&quality=lossless" /></div>
+      <div class="portfolio-item"><img src="https://media.discordapp.net/attachments/1390067282788749493/1395279840579420180/VipPeaoEstancia.png?ex=689242dd&is=6890f15d&hm=491122770877e5f6d1c5cdc99f484511dbf50ef58750be6429c0472df72054cf&=&format=webp&quality=lossless&width=396&height=594" /></div>
 
       <div class="portfolio-item"><img src="https://media.discordapp.net/attachments/1390067282788749493/1395279838641655828/Perdizes_Cartao.png?ex=688f9fdc&is=688e4e5c&hm=1f24f96f87bfcc56ffc82605486e8016c89330fcd3d3a2a7994787761bf2a13b&=&format=webp&quality=lossless&width=334&height=594" /></div>
 
@@ -191,6 +189,10 @@
 
       <div class="portfolio-item"><img src="https://media.discordapp.net/attachments/1390067282788749493/1395279840071913643/VipPatraoEstancia.png?ex=688f9fdc&is=688e4e5c&hm=c2628aeefeafd12d1c74050a67f67788619aae28af32016c6e5bcccc939e27fd&=&format=webp&quality=lossless&width=396&height=594" /></div>
 
+       <div class="portfolio-item"><img src="https://media.discordapp.net/attachments/1390067282788749493/1395279839677907055/VipEstancieiroEstancia.png?ex=689242dc&is=6890f15c&hm=007c9855a65144475886f4991ea79236f22afddfffb10b3ca157750c860e1ae2&=&format=webp&quality=lossless&width=396&height=594" /></div>
+
+      <div class="https://media.discordapp.net/attachments/1390067282788749493/1395279839124131913/VipCapatazEstancia.png?ex=689242dc&is=6890f15c&hm=c8e921fcd8f19d26175685f4795c929f4d1065d27cc0c2aad25bf4d9a4051a61&=&format=webp&quality=lossless&width=396&height=594" /></div>
+      
     </div>
   </section>
 
@@ -208,5 +210,6 @@
   </script>
 </body>
 </html>
+
 
 
