--- a/portfolio.html
+++ b/portfolio.html
@@ -197,9 +197,12 @@
   </section>
 
   <footer>
-    <img src="https://media.discordapp.net/attachments/1390067282788749493/1395282900810731710/Mitski_Studios.png" alt="Logo" />
-    <small>© 2025 Mitski Studios - Todos os direitos reservados</small>
-  </footer>
+  <div class="banner-footer">
+    <img src="https://cdn.discordapp.com/attachments/1392695384102666280/1392721616894431252/standard_4.gif?ex=688d9194&is=688c4014&hm=d73451d20243b77b73f679ebe3899bc008e0d5949588e2be66ce2b67f48025f7&" alt="Banner" />
+  </div>
+
+  <small>© 2025 Mitski Studios - Todos os direitos reservados</small>
+</footer>
 
   <script>
     function toggleTheme() {
@@ -210,6 +213,7 @@
   </script>
 </body>
 </html>
+
 
 
 
