--- a/servicos.html
+++ b/servicos.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="https://media.discordapp.net/attachments/1390067282788749493/1395282900810731710/Mitski_Studios.png" alt="Logo" class="logo" />
+    <img src="https://media.discordapp.net/attachments/1390067282788749493/1395282900810731710/Mitski_Studios.png?ex=689245b6&is=6890f436&hm=2a5eced24d7a3b84a9ecd448c335c737e11dc5609784cf2db074b489ef3f5fa8&=&format=webp&quality=lossless" alt="Logo" class="logo" />
     <nav>
       <a href="index.html">Início</a>
       <a href="portfolio.html">Portfólio</a>
@@ -92,4 +92,5 @@
 </footer>
 </body>
 </html>
+
 
